--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
       <div id="processingOptions" class="hidden">
         <div class="controls">
           <label for="highpassFreq" style="margin-bottom: 10px; display: block">
-            Filter frequencies below: <span id="freqValue">20</span> Hz
+            Remove frequencies below: <span id="freqValue">20</span> Hz
           </label>
           <input
             type="range"
