--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
-    <title>Audio normalizer</title>
+    <title>Audio cleanup tool</title>
     <style>
       body {
         font-family:
@@ -261,7 +261,7 @@
     </style>
   </head>
   <body>
-    <h1>Audio processor</h1>
+    <h1>Audio cleanup tool</h1>
 
     <div class="card">
       <div class="file-input-container">
